--- a/kavyatrivedi/contactuspage/contact.html
+++ b/kavyatrivedi/contactuspage/contact.html
@@ -12,7 +12,7 @@
             padding: 0;
             box-sizing: border-box;
         }
-
+     /* develope by kavya trivedi */
         body {
             font-family: "Poppins", serif;
             font-weight: 100;
