--- a/kavyatrivedi/contactuspage/contact.html
+++ b/kavyatrivedi/contactuspage/contact.html
@@ -114,7 +114,7 @@
             color: #4b4646;
             font-weight: bold;
         }
-
+ /* General Reset */
         footer {
             text-align: center;
             padding: 1rem;
