--- a/kavyatrivedi/contactuspage/contact.html
+++ b/kavyatrivedi/contactuspage/contact.html
@@ -21,6 +21,7 @@
             line-height: 1.6;
         }
 
+     /* develope by kavya trivedi */
         header {
             background-color: #540579;
             color: #fff;
