--- a/kavyatrivedi/contactuspage/contact.html
+++ b/kavyatrivedi/contactuspage/contact.html
@@ -60,6 +60,7 @@
             font-weight: bold;
         }
 
+     /* develope by kavya trivedi */
         form label {
             font-size: 1rem;
             margin-bottom: 0.3rem;
