--- a/kavyatrivedi/contactuspage/contact.html
+++ b/kavyatrivedi/contactuspage/contact.html
@@ -42,6 +42,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.596);
         }
 
+     /* develope by kavya trivedi */
         .section-title {
             margin-bottom: 1rem;
             font-size: 1.5rem;
