--- a/kavyatrivedi/contactuspage/contact.html
+++ b/kavyatrivedi/contactuspage/contact.html
@@ -110,6 +110,7 @@
             
         }
 
+     /* develope by kavya trivedi */
         .faq-item p {
             margin-top: 0.5rem;
             font-size: 0.95rem;
