--- a/kavyatrivedi/demopage/demo2.html
+++ b/kavyatrivedi/demopage/demo2.html
@@ -13,6 +13,7 @@
     @import url("https://fonts.googleapis.com/css2?family=Markazi+Text&display=swap");
     @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
+     /* develope by kavya trivedi */
     * {
         margin: 0;
         padding: 0;
