--- a/kavyatrivedi/demopage/demo2.html
+++ b/kavyatrivedi/demopage/demo2.html
@@ -20,6 +20,7 @@
         box-sizing: border-box;
     }
 
+     /* develope by kavya trivedi */
     body {
         font-family: "Markazi Text", Muli;
         letter-spacing: 1px;
