--- a/kavyatrivedi/demopage/demo2.html
+++ b/kavyatrivedi/demopage/demo2.html
@@ -33,6 +33,7 @@
         text-transform: capitalize;
     }
 
+     /* develope by kavya trivedi */
     .box {
         display: flex;
         align-items: center;
