--- a/kavyatrivedi/demopage/demo2.html
+++ b/kavyatrivedi/demopage/demo2.html
@@ -47,6 +47,7 @@
         position: relative;
     }
 
+     /* develope by kavya trivedi */
     .box h3 {
         font-family: cursive;
         font-size: 2rem;
