--- a/kavyatrivedi/demopage/demo2.html
+++ b/kavyatrivedi/demopage/demo2.html
@@ -75,6 +75,7 @@
         font-size: 1.5rem;
     }
 
+     /* develope by kavya trivedi */
     .box input {
         outline: none;
         border: none;
