--- a/kavyatrivedi/demopage/demo2.html
+++ b/kavyatrivedi/demopage/demo2.html
@@ -97,6 +97,7 @@
         cursor: pointer;
     }
 
+     /* develope by kavya trivedi */
     .box button:hover {
         background-color: #540579;
         opacity: 0.8;
