--- a/kavyatrivedi/demopage/demo2.html
+++ b/kavyatrivedi/demopage/demo2.html
@@ -141,6 +141,7 @@
         opacity: 0.9;
     }
 
+     /* develope by kavya trivedi */
     .popup-overlay {
         display: none;
         position: fixed;
