--- a/kavyatrivedi/homepage/homepage.html
+++ b/kavyatrivedi/homepage/homepage.html
@@ -24,6 +24,7 @@
             transition: background-color 0.3s, color 0.3s;
         }
 
+     /* develope by kavya trivedi */
         /* Navbar */
         .navbar {
             width: 100%;
