--- a/kavyatrivedi/homepage/homepage.html
+++ b/kavyatrivedi/homepage/homepage.html
@@ -12,6 +12,7 @@
             box-sizing: border-box;
         }
 
+     /* develope by kavya trivedi */
         /* Body Styling  kavya trivedi*/
         body {
             font-family: system-ui, sans-serif;
