--- a/kavyatrivedi/homepage/homepage.html
+++ b/kavyatrivedi/homepage/homepage.html
@@ -89,6 +89,7 @@
             
         }
 
+     /* develope by kavya trivedi */
         #dark-mode-button:hover {
             background-color: #666;
             box-shadow: 0 0 10px rgb(255, 255, 255);
