--- a/kavyatrivedi/homepage/homepage.html
+++ b/kavyatrivedi/homepage/homepage.html
@@ -190,6 +190,7 @@
             box-shadow: 0 0 10px rgb(255, 255, 255);
         }
 
+     /* develope by kavya trivedi */
         .front {
             transform: translateZ(75px);
         }
