--- a/kavyatrivedi/homepage/homepage.html
+++ b/kavyatrivedi/homepage/homepage.html
@@ -172,6 +172,7 @@
             
         }
 
+     /* develope by kavya trivedi */
         /* cube and div pachi z y x nu setting for cube by kavya trivedi */
         .cube {
             width: 150px;
