--- a/kavyatrivedi/homepage/homepage.html
+++ b/kavyatrivedi/homepage/homepage.html
@@ -132,6 +132,7 @@
             margin-bottom: 1rem;
         }
 
+     /* develope by kavya trivedi */
         main p {
             font-size: 1.5rem;
             color: #777;
