--- a/kavyatrivedi/homepage/homepage.html
+++ b/kavyatrivedi/homepage/homepage.html
@@ -271,6 +271,7 @@
             color: #ddd;
         }
 
+     /* develope by kavya trivedi */
         body.dark-mode .navbar {
             background-color: #503169;
         }
